--- a/index.css
+++ b/index.css
@@ -6,4 +6,13 @@
 
 .jumbotron {
     text-align: center;
+    padding-top: 13%;
+    padding-left: 2%;
+    padding-right: 2%;
+    background: linear-gradient(0.3turn, #000000, #b8b8b8, #ffffff);
+    color: #ffffff;
+}
+
+body {
+    background: linear-gradient(0.4turn, #ff0000, #ffffff, #000000) fixed;
 }
