--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     border: 1px solid white;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
+    transition: .2s;
 }
 
 .jumbotron {
