--- a/index.css
+++ b/index.css
@@ -10,10 +10,10 @@
     padding-top: 13%;
     padding-left: 2%;
     padding-right: 2%;
-    background: linear-gradient(0.3turn, #000000, #b8b8b8, #ffffff);
+    background: linear-gradient(0.3turn, #000000, #aaa2d6);
     color: #ffffff;
 }
 
 body {
-    background: linear-gradient(0.4turn, #ff0000, #ffffff, #000000) fixed;
+    background: linear-gradient(0.4turn, #ff0000, #aaa2d6) fixed;
 }
